--- a/src/app/components/menu-list/menu-list.component.html
+++ b/src/app/components/menu-list/menu-list.component.html
@@ -101,90 +101,6 @@
         <div class="text-black-50">Bevanda</div>
         <div class="text-black-50">2 €</div>
       </div>
-      <div class="d-flex justify-content-between align-items-center">
-        <div class="text-black-50">Pizza</div>
-        <div class="text-black-50">10 €</div>
-      </div>
-      <div class="d-flex justify-content-between align-items-center">
-        <div class="text-black-50">Bevanda</div>
-        <div class="text-black-50">2 €</div>
-      </div>
-      <div class="d-flex justify-content-between align-items-center">
-        <div class="text-black-50">Pizza</div>
-        <div class="text-black-50">10 €</div>
-      </div>
-      <div class="d-flex justify-content-between align-items-center">
-        <div class="text-black-50">Bevanda</div>
-        <div class="text-black-50">2 €</div>
-      </div>
-      <div class="d-flex justify-content-between align-items-center">
-        <div class="text-black-50">Pizza</div>
-        <div class="text-black-50">10 €</div>
-      </div>
-      <div class="d-flex justify-content-between align-items-center">
-        <div class="text-black-50">Bevanda</div>
-        <div class="text-black-50">2 €</div>
-      </div>
-      <div class="d-flex justify-content-between align-items-center">
-        <div class="text-black-50">Pizza</div>
-        <div class="text-black-50">10 €</div>
-      </div>
-      <div class="d-flex justify-content-between align-items-center">
-        <div class="text-black-50">Bevanda</div>
-        <div class="text-black-50">2 €</div>
-      </div>
-      <div class="d-flex justify-content-between align-items-center">
-        <div class="text-black-50">Pizza</div>
-        <div class="text-black-50">10 €</div>
-      </div>
-      <div class="d-flex justify-content-between align-items-center">
-        <div class="text-black-50">Bevanda</div>
-        <div class="text-black-50">2 €</div>
-      </div>
-      <div class="d-flex justify-content-between align-items-center">
-        <div class="text-black-50">Pizza</div>
-        <div class="text-black-50">10 €</div>
-      </div>
-      <div class="d-flex justify-content-between align-items-center">
-        <div class="text-black-50">Bevanda</div>
-        <div class="text-black-50">2 €</div>
-      </div>
-      <div class="d-flex justify-content-between align-items-center">
-        <div class="text-black-50">Pizza</div>
-        <div class="text-black-50">10 €</div>
-      </div>
-      <div class="d-flex justify-content-between align-items-center">
-        <div class="text-black-50">Bevanda</div>
-        <div class="text-black-50">2 €</div>
-      </div>
-      <div class="d-flex justify-content-between align-items-center">
-        <div class="text-black-50">Bevanda</div>
-        <div class="text-black-50">2 €</div>
-      </div>
-      <div class="d-flex justify-content-between align-items-center">
-        <div class="text-black-50">Pizza</div>
-        <div class="text-black-50">10 €</div>
-      </div>
-      <div class="d-flex justify-content-between align-items-center">
-        <div class="text-black-50">Bevanda</div>
-        <div class="text-black-50">2 €</div>
-      </div>
-      <div class="d-flex justify-content-between align-items-center">
-        <div class="text-black-50">Pizza</div>
-        <div class="text-black-50">10 €</div>
-      </div>
-      <div class="d-flex justify-content-between align-items-center">
-        <div class="text-black-50">Bevanda</div>
-        <div class="text-black-50">2 €</div>
-      </div>
-      <div class="d-flex justify-content-between align-items-center">
-        <div class="text-black-50">Pizza</div>
-        <div class="text-black-50">10 €</div>
-      </div>
-      <div class="d-flex justify-content-between align-items-center">
-        <div class="text-black-50">Bevanda</div>
-        <div class="text-black-50">2 €</div>
-      </div>
 
     </div>
 
@@ -205,7 +121,7 @@
 
   <!--bottone riepilogo-->
   <div class="mt-2" *ngIf="showRecap">
-    <button class="btn btn-success w-100 fw-bold">CONFERMA E INVIA</button>
+    <button class="btn btn-success w-100 fw-bold" routerLink="/order-confirmation">CONFERMA E INVIA</button>
     <button class="btn btn-sm btn-light w-100 mt-2" (click)="showRecap = false">Annulla</button>
   </div>
 
