--- a/src/app/components/menu-list/menu-list.component.scss
+++ b/src/app/components/menu-list/menu-list.component.scss
@@ -1,6 +1,8 @@
 .list {
   padding-bottom: 125px;
   padding-top: 50px;
+  max-width: 500px;
+  margin: auto;
 }
 
 .title-row {
@@ -21,7 +23,6 @@
   position: fixed;
   bottom: 0;
   width: 100%;
-  max-width: 500px;
   box-shadow: -1px -2px 8px #ebdddd;
   border-radius: 1em 1em 0 0;
   transform: translateY(+100%);
