--- a/src/app/components/order-confirmation/order-confirmation.component.html
+++ b/src/app/components/order-confirmation/order-confirmation.component.html
@@ -5,7 +5,7 @@
 
     <!--CODICE-->
     <div class="code p-4 mb-4 rounded">
-      <span>1-256</span>
+      <span>{{receiptId}}</span>
     </div>
 
     <p>Buon appetito</p>
