add button to edit order

--- a/src/app/components/order-confirmation/order-confirmation.component.html
+++ b/src/app/components/order-confirmation/order-confirmation.component.html
@@ -10,5 +10,10 @@
 
     <p>Buon appetito</p>
     <p class="fw-bold">Verzi Group</p>
+
+    <mat-divider class="mb-3"></mat-divider>
+
+    <p>Hai cambiato idea?</p>
+    <button mat-flat-button color="primary" (click)="editSavedOrder()">Modifica il tuo ordine</button>
   </div>
 </div>
